/***********************************************************************
 X3 ChangeLog

2006-07-31  Neil Spierling  <sirvulcan@gmail.com>

	* x3.conf.example: Added SHUN setting for DEFCON.

	* doc/DEFCON: Added SHUN setting for DEFCON.

	* src/opserv.c: Moved the gline check to here. Also added a SHUN
	check.

	* src/opserv.h: Added SHUN setting for DEFCON.

	* src/proto-p10.c: Moved the DEFCON gline check to opserv.c

2006-07-31  Neil Spierling  <sirvulcan@gmail.com>

	* x3.conf.example: Added new Defcon system settings

	* doc/DEFCON: Anope's Defcon doc adapted for X3.

	* src/chanserv.c: Block mode changes and channel registrations if
	required.

	* src/mod-memoserv.c: Block new memos if required.

	* src/nickserv.c: Block nick registrations if required.

	* src/opserv.c: Added in defcon system, uses some of the anope code.
	Most tho is from scratch.

	* src/opserv.h: Defcon declerations.

	* src/opserv.help: Added DEFCON entry.

	* src/proto-p10.c: If required gline new clients, also if required
	kill new clients.

2006-07-29  Alex Schumann  <rubin@afternet.org>

	* configure.in, Makefile.in, src/Makefile.in, tools/tre_install.sh,
	src/opserv.c, src/config.h.in, src/nickserv.c, src/Makefile.am: I am
	not comfortable running 'make install' on libtre from ./configure.
	This violates what the user expects in a way that can harm the system.
	Changed how the libtre checks work and provided easy-to-use install
	script. -fix link stage

	* rx/Makefile.in: fix autotools warning(s)
	
2006-07-28  Alex Schumann  <rubin@afternet.org>

	* src/nickserv.help: add odelcookie to help oper

	* x3.conf.example: update & improve x3.conf.example description of
	extended_accounts setting.

2006-07-26  Alex Schumann  <rubin@afternet.org>
	
	* src/opserv.c: Fix crash when doing reroute if routing isnt
	configured. | Voice discovered that the error message for addplan fail
	was typeo'd so not showing.

	* src/opserv.help: slight changes to routing help.
